--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+
+.idea/logMMSE.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+.idea/workspace.xml
